Fixes hero arrow and spacing on headers

--- a/app/styles/globals/layout.scss
+++ b/app/styles/globals/layout.scss
@@ -86,6 +86,7 @@ h2 {
   color: #FFF;
   font-size: 30px;
   letter-spacing: 1.5px;
+  line-height: 1.25em;
   margin: 20px 0 10px;
 
   @include breakpoint($small-breakpoint) {
