--- a/app/styles/sections/portfolio.scss
+++ b/app/styles/sections/portfolio.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-flow: row wrap;
   text-align: center;
-  margin-top: 40px;
+  margin-top: 20px;
 
   @include breakpoint($small-breakpoint) {
     margin-top: 60px;
